# Data-Preparation-Bench-2

./: .pre-commit-config.yaml  Experiment.md  README.md  pyproject.toml
.github/workflows/: release.yml
Data-Agent-Evaluation/: README.md  README_zh.md  set_dataset.py
Data-Agent-Evaluation/Business_eval/: configure_business_evals.py  run_business_evals.sh
Data-Agent-Evaluation/Business_eval/FinCDM/src/: fincdm.py  introduction.md  local-eval.py  referee_review.py  run_task_eval.py
Data-Agent-Evaluation/Business_eval/XFinBench/: run.sh
Data-Agent-Evaluation/Business_eval/XFinBench/construct_data/: Generate_then_verify.py  QA_Deduplicate_Bool.py
Data-Agent-Evaluation/Business_eval/XFinBench/evaluate/: eval_metrics.py  load_models.py  load_retriever.py  main.py  rejudge.py
Data-Agent-Evaluation/Business_eval/XFinBench/evaluate/prompt_template/: bool_CoT.txt  bool_DA.txt  calcu_CoT.txt  calcu_DA.txt  calcu_PoT.txt  mcq_CoT.txt  mcq_DA.txt
Data-Agent-Evaluation/Business_eval/XFinBench/scripts/: export_bool_questions.py  run_evaluate.sh
Data-Agent-Evaluation/Law_eval/: configure_law_evals.py  run_law_evals.sh
Data-Agent-Evaluation/Law_eval/legalbench/: eval.py
Data-Agent-Evaluation/Law_eval/legalbench/temp_ucc/ucc_v_common_law/: test.tsv
Data-Agent-Evaluation/Law_eval/lex-glue/: eval.py  run_all_tasks.sh  score_result
Data-Agent-Evaluation/Law_eval/lex-glue/experiments/: case_hold.py  ecthr.py  eurlex.py  ledgar.py  openai_eval.py  scotus.py  unfair_tos.py
Data-Agent-Evaluation/Law_eval/lex-glue/scripts/: compute_accuracy.py
Data-Agent-Evaluation/Medicine_eval/: configure_medicine_evals.py  run_medicine_evals.sh
Data-Agent-Evaluation/Medicine_eval/MedCaseReasoning/: eval.py  inferce.py  requirements.txt  run_all.sh
Data-Agent-Evaluation/Medicine_eval/MedRBench/src/Evaluation/: 1turn_diagnose_accuracy.py  1turn_reasoning.py  diagnose_metrics_summary.py  free_turn_assessment_recommendation.py  free_turn_diagnose_accuracy.py  oracle_diagnose_accuracy.py  oracle_diagnose_reasoning.py  treatment_final_accuracy.py  treatment_metrics_summary.py  utils.py
Data-Agent-Evaluation/Medicine_eval/MedRBench/src/Inference/: free_turn.py  (+3 more)
Data-Agent-Evaluation/Medicine_eval/MedXpertQA/: llm_eval_medmcqa.py
Data-Agent-Evaluation/Medicine_eval/MedXpertQA/eval/: eval.ipynb  main.py  requirements.txt  utils.py
examples/: compute_mmd.py
src/distflow/: mmd.py
src/distflow/cache/: protocol.py  redis_cache.py
src/distflow/data/: data_formatter.py  data_loader.py  types.py
src/distflow/embed/: base.py  cache_wrapper.py  openai_embed.py  sentence_transformers.py  types.py  vllm.py
src/distflow/utils/: logger.py  stats.py  timing.py
(+43 files in other folders)
