[project]
name = "distflow"
version = "1.0.3"
description = "Distance Computation Package for Data Preparation Bench"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "datasets",
    "modelscope",
    "openai",
    "pandas",
    "pydantic",
    "pyyaml",
    "redis",
    "scikit-learn",
    "sentence-transformers",
    "torch",
    "transformers",
]

[project.optional-dependencies]
vllm = ["vllm"]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[build-system]
requires = ["uv_build>=0.9.5,<0.12"]
build-backend = "uv_build"

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
