[project]
name = "distflow"
dynamic = ["version"]
description = "Distance Computation Package for Data Preparation Bench"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "datasets",
    "modelscope",
    "openai",
    "pandas",
    "pydantic",
    "pyyaml",
    "redis",
    "scikit-learn",
    "sentence-transformers",
    "torch",
    "transformers",
]

[project.optional-dependencies]
vllm = ["vllm"]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/distflow"]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
